# darwin-analysis

./: Makefile  README.md  pyproject.toml  requirements.txt
darwin/: __init__.py  config.py  dataset.py  features.py  plots.py
darwin/modeling/: predict.py  train.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: data-analysis.ipynb  feature-selection.ipynb  feature.ipynb  model-training.ipynb  presentation.ipynb
