[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "darwin"
version = "0.0.1"
description = "data exploration on the DARWIN dataset"
authors = [
  { name = "edu" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["darwin"]
include = ["pyproject.toml", "darwin/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["darwin"]
force-sort-within-sections = true

